# ML-IP

./: .gitignore  .pre-commit-config.yaml  README.md  cancer.csv.dvc  dvc.yaml  hw01_task.ipynb  linting.md  pyproject.toml  requirements.txt
.dvc/: config
scripts/: KDTree.py  KNearest.py  metrics.py
scriptsMix0z/: KDTree.py  KNearest.py  TestKDTree.py  __init__.py  dataset.py  main.py  metrics.py  visualization.py
