[tool.poetry]
name = "scriptsMix0z"
version = "0.2.2"
description = ""
authors = ["mix0z <mixoz3101@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.3"
matplotlib = "^3.3.2"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
pytest-cov = "^2.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
